# usb_manager

./: Cargo.toml  README.md
examples/: monitoring_device.rs
src/: adapter.rs  device_interface.rs  hid_device.rs  lib.rs  manager.rs  pnp_detect.rs  utils.rs
